# Kokoros-mp3

./: .gitignore  Cargo.toml  Dockerfile  README.md  download_all.sh  install.sh  ps.sh  requirements.txt
checkpoints/: .gitignore  download_models.sh
data/: video-1737110239209.webm
koko/: Cargo.toml
koko/src/: main.rs
kokoros/: Cargo.toml
kokoros-openai/: Cargo.toml
kokoros-openai/src/: lib.rs
kokoros/src/: lib.rs
kokoros/src/onn/: mod.rs  ort_base.rs  ort_koko.rs
kokoros/src/tts/: koko.rs  normalize.rs  phonemizer.rs  vocab.rs
kokoros/src/utils/: debug.rs  fileio.rs  mod.rs  mp3.rs  wav.rs
scripts/: download_models.sh  download_voices.sh  fetch_voices.py  requirements.txt  run_openai.py
src/: main.rs
src/onn/: ort_base.rs  ort_koko.rs
src/serve/: openai.rs
src/tts/: koko.rs  mod.rs  tokenize.rs  tokenizer.rs  vocab.rs
src/utils/: fileio.rs  mod.rs
tmp/: .gitignore
