[package]
name = "koko"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.5.1"
indicatif = "0.17.9"
ndarray = "0.16.1"
lazy_static = "1.5.0"
regex = "1.9.5"
ort = { version = "2.0.0-rc.4", features = ["coreml"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
serde_json = "1.0.135"
espeak-rs = "0.1.9"
