[package]
name = "koko"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.5.1"
indicatif = "0.17.9"
ndarray = "0.16.1"
lazy_static = "1.5.0"
regex = "1.9.5"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde_json = "1.0.135"
espeak-rs = "0.1.9"
clap = { version = "4.5.26", features = ["derive"] }

# ONNX Runtime dependencies
ort = { version = "2.0.0-rc.4", default-features = false }

# Web server dependencies
axum = { version = "0.7", features = ["http2", "macros"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "1.0", features = ["full"] }
base64 = "0.22.1"

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.4", features = ["coreml"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = { version = "2.0.0-rc.4", features = [] }
