[package]
name = "kokoros-openai"
version = "0.1.0"
edition = "2021"

[dependencies]
kokoros = { path = "../kokoros" }

axum = { version = "0.7", features = ["http2"] }
base64 = "0.22.1"
hound = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
