[package]
name = "kokoros-openai"
version = "0.1.0"
edition = "2021"

[dependencies]
kokoros = { path = "../kokoros" }

axum = { version = "0.7", features = ["http2"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }

mp3lame-encoder = "0.2.1"