[package]
name = "kokoros"
version = "0.1.0"
edition = "2021"

[dependencies]
espeak-rs = "0.1.9"
hound = "3.5.1"
indicatif = "0.17.9"
ndarray = "0.16.1"
lazy_static = "1.5.0"
regex = "1.9.5"
reqwest = { version = "0.12.12" }
serde_json = "1.0.135"
tokio = { version = "1.0", features = ["fs", "io-util"] }
ndarray-npy = "0.9.1"

# ONNX Runtime dependencies
ort = { version = "2.0.0-rc.9", default-features = true }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["coreml"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = { version = "2.0.0-rc.9", features = [] }
